src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --primary: #3b2929;
  --secondary: #fdea9b;
}

body {
  font-family: "Inknut Antiqua", "Poppins";
}

.sec1 {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url("/assets/main-bg.png");
  background-size: cover;
  background-position: center;
}

.hero {
  top: 6vh;
}

.sec1 h1 {
  color: var(--secondary);
}

.sec1 p {
  width: 90%;
}

.banner {
  font-family: "Poppins", "serif";
  background-color: var(--secondary);
}

.hours {
  font-family: "Inknut Antiqua", "Poppins";
}

.lm-img {
  width: 100%;
  height: 500px;
}

.vl {
  height: 43.7rem;
}

.gridItem:hover img {
  transform: scale(1.1);
  transition: all ease-in 0.3s;
  filter: brightness(0.6);
}

.gridItem:hover p {
  display: block;
  font-family: "Poppins", "Serif";
  transition: all ease-in 0.3s;
}

.menu {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url("/assets/menu-bg.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

.menu-vl {
  border: 1px solid var(--primary);
}

.hr {
  width: 95%;
  border: 1px solid var(--primary);
}

.Items::-webkit-scrollbar {
  width: 15px;
}
.Items::-webkit-scrollbar-track {
  background-color: #d8cb98;
}

.Items::-webkit-scrollbar-thumb {
  background-color: var(--primary);
}

.contact {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url("/assets/main-lights.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

.about {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
    url("/assets/aboutus-bg.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}

.about p {
  line-height: 2rem;
}

@media (min-width: 0px) {
}

@media (min-width: 768px) {
}

@media (min-width: 1024px) {
  .hero {
    top: 5vh;
  }

  .sec1 p {
    width: 45%;
  }

  .sec1 .icons {
    position: absolute;
    left: 90%;
  }

  .lm-img {
    width: 30%;
    min-height: 700px;
  }

  .learnmore p {
    font-weight: lighter;
    line-height: 3.5rem;
  }

  .about img {
    height: 400px;
  }

  .about p {
    line-height: 3.5rem;
  }
}

@media (min-width: 1600px) {
  .hero {
    top: 12vh;
  }

  .sec1 p {
    width: 45%;
  }

  .about > * {
    flex-direction: row;
  }

  .about p {
    width: 50%;
  }

  .about img {
    height: auto;
  }

  .ftr-list {
    gap: 40%;
  }
}

